Name:                   onping-tag-report
Version:                0.1.0
Author:                 Lingpo Huang <lingpo.huang@plowtech.net>
Maintainer:             Lingpo Huang <lingpo.huang@plowtech.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Report template Generator for onping   
Description:            Report template Generator for onping   
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Onping.Tag.Report
  Other-Modules:        Onping.Tag.Report.Internal
  Build-Depends:        base                           >= 4 && < 5
                      , aeson                          
                      , persist-mongo-template         == 5.0.7
                      , persistent                     
                      , persistent-mongoDB             
                      , text
                      , HStringTemplate                


Executable onpingtagreport
   main-is:            Main.hs
   HS-Source-Dirs:     src   
   default-language:  Haskell2010
   ghc-options:       -threaded -O2 -rtsopts -Wall   
   build-depends:       base
                      , aeson                          
                      , persist-mongo-template   
                      , persistent                     
                      , persistent-mongoDB             
                      , text
                      , HStringTemplate                

   
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , aeson                          
                      , persist-mongo-template         
                      , persistent                    
                      , persistent-mongoDB             
                      , text
--                      , HStringTemplate 

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/onping-tag-report.git
